# pyrotd

./: .coveragerc  .git-blame-ignore-rev  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README  README.rst  TODO.rst  example.ipynb  example.py  pyproject.toml  pyrotd.py  readthedocs.yml  requirements.txt  requirements_dev.txt  requirements_rtfd.txt  response_spectra.py  setup.cfg  setup.py  tests.py  travis_pypi_setup.py
doc/: conf.py
docs/: Makefile  api.rst  conf.py  contributing.rst  example.rst  index.rst
example/: 10010100.m006m001.vel.bbp
examples/: example-1.ipynb  example-2.ipynb  example.py
examples/data/: RSN8883_14383980_13849360.AT2
pyrotd/: __init__.py
testData/: .indiv.csv.swp  indiv.csv  rotd50.csv
test_data/: A-CAT180.AT2.smc  smc2psa_rot_gmrot_rot_osc_ts.damp0.050.out
tests/: test_osc_resp.py  test_spectra.py
tests/data/: A-CAT090.AT2.smc  RSN8883_14383980_13849090.AT2  RSN8884_14383980_13873090.AT2  RSN8884_14383980_13873360.AT2  accel_ts.bbp
