[aliases]
test = pytest
release = clean --all sdist bdist_wheel build_sphinx upload upload_docs

[metadata]
name = pyrotd
license = MIT
version = 0.4.6
description = Rotated response spectrum calculation implemented in Python.
long_description = file: README.rst
url = http://github.com/arkottke/pyrotd
author = Albert Kottke
author_email = albert.kottke@gmail.com
requires =
    numpy
    setuptools
test_suite = tests
keywords = response spectrum, earthquake ground motion
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research

[options]
zip_safe = True
include_package_data = True
packages = find:

[wheel]
universal = 1

[tool:pytest]
addopts = --flake8 tests.py
