[aliases]
test = pytest
release = clean --all sdist bdist_wheel build_sphinx upload upload_docs

[flake8]
exclude = docs/
max-line-length = 88
extend-ignore = E203

[metadata]
description_file = README.rst

[tool:test]
addopts = --flake8

[pydocstyle]
inherit = false
convention = numpy
match = (?!test_).*\.py

[yapf]
based_on_style = pep8
spaces_around_power_operator = true

[wheel]
universal = 1
