[aliases]
test = pytest
release = clean --all sdist bdist_wheel build_sphinx upload upload_docs

[metadata]
description_file = README.rst

[pydocstyle]
inherit = false
convention = numpy
match = (?!test_).*\.py

[yapf]
based_on_style = pep8
spaces_around_power_operator = true

[wheel]
universal = 1
